[project]
name = "mcp-sqlalchemy-server"
version = "0.3.1"
description = "A simple MCP ODBC server using FastAPI and ODBC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "mcp[cli]>=1.4.1",
 "pyodbc>=5.2.0",
 "python-dotenv>=1.0.1",
]
[[project.authors]]
name = "Sergey Malinin"
email = "sergmalinin@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-sqlalchemy-server = "mcp_sqlalchemy_server:main"
